--- a/interprocess.cabal
+++ b/interprocess.cabal
@@ -26,6 +26,8 @@ extra-source-files:
 library
     hs-source-dirs:    src
     exposed-modules:   Foreign.SharedPtr
+                       Foreign.SharedObjectName
+                       Foreign.SharedObjectName.Internal
                        Foreign.SharedPtr.C
                        Control.Concurrent.Process.QSem
     build-depends:     base >= 4.7 && < 5
