--- a/interprocess.cabal
+++ b/interprocess.cabal
@@ -22,6 +22,15 @@ extra-source-files:
     src/Foreign/SharedPtrPosix.c
     src/Foreign/SharedPtrWin32.c
 
+flag examples
+    description:
+      Build example-test programs
+    default: False
+
+flag dev
+    description:
+      Development build with debugging and with no optimization
+    default: False
 
 library
     hs-source-dirs:    src
@@ -41,22 +50,32 @@ library
       c-sources:       src/Foreign/SharedPtrWin32.c
     else
       c-sources:       src/Foreign/SharedPtrPosix.c
+    if flag(dev)
+        cpp-options:   -DSTDOUT_SYSCALL_DEBUG
+        ghc-options:   -O0
+    else
+        cpp-options:   -DNDEBUG
+        ghc-options:   -O2
 
 
 executable interprocess-concurrent-malloc
-  hs-source-dirs:      app
-  main-is:             concurrent-malloc.hs
-  default-language:    Haskell2010
-  build-depends:       base >= 4.7 && < 5
-                     , typed-process >= 0.2
-                     , interprocess
-  ghc-options:         -threaded -Wall
+    if !flag(examples)
+      buildable:         False
+    hs-source-dirs:      app
+    main-is:             concurrent-malloc.hs
+    default-language:    Haskell2010
+    build-depends:       base >= 4.7 && < 5
+                       , typed-process >= 0.2
+                       , interprocess
+    ghc-options:         -threaded -Wall
 
 executable interprocess-wait-qsem
-  hs-source-dirs:      app
-  main-is:             wait-qsem.hs
-  default-language:    Haskell2010
-  build-depends:       base >= 4.7 && < 5
-                     , typed-process >= 0.2
-                     , interprocess
-  ghc-options:         -threaded -Wall
+    if !flag(examples)
+      buildable:         False
+    hs-source-dirs:      app
+    main-is:             wait-qsem.hs
+    default-language:    Haskell2010
+    build-depends:       base >= 4.7 && < 5
+                       , typed-process >= 0.2
+                       , interprocess
+    ghc-options:         -threaded -Wall
