--- a/interprocess.cabal
+++ b/interprocess.cabal
@@ -39,7 +39,7 @@ library
                        Foreign.SharedObjectName.Internal
                        Foreign.SharedPtr.C
                        Control.Concurrent.Process.QSem
-    build-depends:     base >= 4.7 && < 5
+    build-depends:     base >= 4.8 && < 5
     default-language:  Haskell2010
     ghc-options:       -Wall
     include-dirs:      include
@@ -64,7 +64,7 @@ executable interprocess-concurrent-malloc
     hs-source-dirs:      app
     main-is:             concurrent-malloc.hs
     default-language:    Haskell2010
-    build-depends:       base >= 4.7 && < 5
+    build-depends:       base
                        , typed-process >= 0.2
                        , interprocess
     ghc-options:         -threaded -Wall
@@ -75,7 +75,7 @@ executable interprocess-wait-qsem
     hs-source-dirs:      app
     main-is:             wait-qsem.hs
     default-language:    Haskell2010
-    build-depends:       base >= 4.7 && < 5
+    build-depends:       base
                        , typed-process >= 0.2
                        , interprocess
     ghc-options:         -threaded -Wall
