--- a/interprocess.cabal
+++ b/interprocess.cabal
@@ -18,6 +18,7 @@ extra-source-files:
     cbits/SharedObjectName.c
     include/SharedObjectName.h
     include/SharedPtr.h
+    src/Control/Concurrent/Process/StoredMVar.c
     src/Control/Concurrent/Process/QSem.c
     src/Foreign/SharedPtrPosix.c
     src/Foreign/SharedPtrWin32.c
@@ -39,11 +40,13 @@ library
                        Foreign.SharedObjectName.Internal
                        Foreign.SharedPtr.C
                        Control.Concurrent.Process.QSem
+                       Control.Concurrent.Process.StoredMVar
     build-depends:     base >= 4.8 && < 5
     default-language:  Haskell2010
     ghc-options:       -Wall
     include-dirs:      include
     c-sources:         cbits/SharedObjectName.c
+                       src/Control/Concurrent/Process/StoredMVar.c
                        src/Control/Concurrent/Process/QSem.c
                        src/Foreign/SharedPtr.c
     if os(windows)
