--- a/interprocess.cabal
+++ b/interprocess.cabal
@@ -28,3 +28,15 @@ executable wait-mvar
     cc-options:          -pthread -g -DNDEBUG
     cpp-options:         -DNDEBUG
     c-sources:           src/StoredMVar.c
+
+executable wait-mvar-simpler
+    hs-source-dirs:      src
+    main-is:             wait-mvar-simpler.hs
+    default-language:    Haskell2010
+    build-depends:       base
+                       , typed-process >= 0.2
+    ghc-options:         -threaded -Wall -debug -O0
+    extra-libraries:     pthread
+    cc-options:          -pthread -g -DNDEBUG
+    cpp-options:         -DNDEBUG
+    c-sources:           src/StoredMVar.c
