--- a/interprocess.cabal
+++ b/interprocess.cabal
@@ -1,7 +1,7 @@
 name:                interprocess
-version:             0.1.0.0
+version:             0.2.0.0
 synopsis:            Shared memory and control structures for IPC
-description:         Provides portable shared memory allocator and semaphores.
+description:         Provides portable shared memory allocator and some synchronization primitives.
                      Can be used for interprocess communication.
                      Refer to README.md for further information.
 homepage:            https://github.com/achirkin/interprocess
@@ -93,3 +93,12 @@ executable wait-mvar
                        , typed-process >= 0.2
                        , interprocess
     ghc-options:         -threaded -Wall
+
+test-suite StoredMVar
+    type:                exitcode-stdio-1.0
+    main-is:             StoredMVar.hs
+    default-language:    Haskell2010
+    hs-source-dirs:      test
+    build-depends:       base
+                       , typed-process >= 0.2
+                       , interprocess
