--- a/interprocess.cabal
+++ b/interprocess.cabal
@@ -1,5 +1,5 @@
 name:                interprocess
-version:             0.2.0.1
+version:             0.2.1.0
 synopsis:            Shared memory and control structures for IPC
 description:         Provides portable shared memory allocator and some synchronization primitives.
                      Can be used for interprocess communication.
@@ -68,7 +68,7 @@ executable concurrent-malloc
     main-is:             concurrent-malloc.hs
     default-language:    Haskell2010
     build-depends:       base
-                       , typed-process >= 0.2
+                       , typed-process >= 0.2.5
                        , interprocess
     ghc-options:         -threaded -Wall
 
@@ -79,7 +79,7 @@ executable wait-qsem
     main-is:             wait-qsem.hs
     default-language:    Haskell2010
     build-depends:       base
-                       , typed-process >= 0.2
+                       , typed-process >= 0.2.5
                        , interprocess
     ghc-options:         -threaded -Wall
 
@@ -90,7 +90,7 @@ executable wait-mvar
     main-is:             wait-mvar.hs
     default-language:    Haskell2010
     build-depends:       base
-                       , typed-process >= 0.2
+                       , typed-process >= 0.2.5
                        , interprocess
     ghc-options:         -threaded -Wall
 
@@ -99,7 +99,18 @@ test-suite StoredMVar
     main-is:             StoredMVar.hs
     default-language:    Haskell2010
     hs-source-dirs:      test
-    build-depends:       base
-                       , typed-process >= 0.2
+    build-depends:       base >= 4.11
+                       , typed-process >= 0.2.5
                        , interprocess
+    ghc-options:         -threaded -Wall
+
+test-suite AsyncProblem
+    type:                exitcode-stdio-1.0
+    main-is:             AsyncProblem.hs
+    default-language:    Haskell2010
+    hs-source-dirs:      test
+    build-depends:       base
+                       , typed-process >= 0.2.5
+                       , interprocess
+                       , async
     ghc-options:         -threaded -Wall
