--- a/interprocess.cabal
+++ b/interprocess.cabal
@@ -55,6 +55,8 @@ library
       c-sources:       src/Foreign/SharedPtrPosix.c
     if flag(dev)
         ghc-options:   -O0
+        cpp-options:   -DINTERPROCESS_DEBUG
+        cc-options:    -DINTERPROCESS_DEBUG
     else
         cpp-options:   -DNDEBUG
         cc-options:    -DNDEBUG
