--- a/interprocess.cabal
+++ b/interprocess.cabal
@@ -101,20 +101,13 @@ executable wait-mvar
 test-suite StoredMVar
     type:                exitcode-stdio-1.0
     main-is:             StoredMVar.hs
+    other-modules:       Tools.TestResult
+                         Tools.Runner
     default-language:    Haskell2010
     hs-source-dirs:      test
     build-depends:       base >= 4.11
                        , typed-process >= 0.2.5
-                       , interprocess
-    ghc-options:         -threaded -Wall
-
-test-suite AsyncProblem
-    type:                exitcode-stdio-1.0
-    main-is:             AsyncProblem.hs
-    default-language:    Haskell2010
-    hs-source-dirs:      test
-    build-depends:       base
-                       , typed-process >= 0.2.5
-                       , interprocess
                        , async
+                       , containers
+                       , interprocess
     ghc-options:         -threaded -Wall
