--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,7 +16,7 @@ jobs:
       matrix:
         ghc: ['8.4', '8.6', '8.8', '8.10', '9.0', '9.2']
         cabal: ['latest']
-        os: [ubuntu-latest, macOS-latest, windows-latest]
+        os: [macOS-latest]
     name: ${{ matrix.os }} / GHC ${{ matrix.ghc }} (cabal-${{ matrix.cabal }})
     steps:
       - uses: actions/checkout@v3
@@ -36,7 +36,6 @@ jobs:
         run: cabal v2-build --enable-tests --enable-benchmarks
 
       - name: Run tests
-        continue-on-error: ${{ runner.os != 'ubuntu' }}
         run: cabal v2-test
 
       - name: Build samples
