--- a/interprocess.cabal
+++ b/interprocess.cabal
@@ -100,20 +100,31 @@ executable wait-mvar
                        , interprocess
     ghc-options:         -threaded -Wall
 
-test-suite StoredMVar
-    type:                exitcode-stdio-1.0
-    main-is:             StoredMVar.hs
-    other-modules:       Tools.Handle
-                         Tools.TestResult
-                         Tools.Runner
-    default-language:    Haskell2010
-    hs-source-dirs:      test
-    build-depends:       base >= 4.11
-                       , typed-process >= 0.2.5
-                       , async
-                       , containers
-                       , bytestring
-                       , stm
-                       , temporary
-                       , interprocess
-    ghc-options:         -threaded -Wall
+common interprocess-test-tools
+    hs-source-dirs:    test-src
+    other-modules:     Tools.Handle
+                       Tools.TestResult
+                       Tools.Runner
+    build-depends:     base >= 4.11
+                     , typed-process >= 0.2.5
+                     , async
+                     , containers
+                     , bytestring
+                     , stm
+                     , temporary
+                     , time
+                     , interprocess
+    default-language:  Haskell2010
+    ghc-options:       -threaded -Wall
+
+test-suite test-mvar
+    import:         interprocess-test-tools
+    type:           exitcode-stdio-1.0
+    main-is:        test-mvar.hs
+    hs-source-dirs: test
+
+benchmark time-mvar
+    import:         interprocess-test-tools
+    type:           exitcode-stdio-1.0
+    main-is:        time-mvar.hs
+    hs-source-dirs: bench
